[gd_scene load_steps=4 format=2]

[ext_resource path="res://gui/roots/title/title.gd" type="Script" id=1]
[ext_resource path="res://gui/menus/title/Title.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/menus/new_game/NewGame.tscn" type="PackedScene" id=3]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" parent="." instance=ExtResource( 2 )]

[node name="NewGame" parent="." instance=ExtResource( 3 )]

[connection signal="make_new_game" from="Title" to="." method="s__make_new_game"]
[connection signal="start_new_game" from="NewGame" to="." method="s__start_new_game"]
